--- a/templates/brand.html
+++ b/templates/brand.html
@@ -4,70 +4,47 @@
 
 {% block main %}
 <div class="muClass1" >
-    <div class="container marketing">
-      
-      <!-- Three columns of text below the carousel -->
-      
-      <div class="row"> 
-        <div class="col-lg-12" style="box-shadow: 0 8px 15px rgba(0, 0, 0, .6); border-radius: 5px 5px 5px 5px; padding-top: 20px;   background: linear-gradient(45deg,#ffffff, #fffbdf);;
-    background-size: 100% 100%;  ">
-         <div class="row">         
+  <div class="container marketing">
+  <!-- Three columns of text below the carousel -->
+    <div class="row"> 
+      <div class="col-lg-12" style="box-shadow: 0 8px 15px rgba(0, 0, 0, .6); border-radius: 5px 5px 5px 5px; padding-top: 20px;   background: linear-gradient(45deg,#ffffff, #fffbdf); background-size: 100% 100%;">
+        <div class="row">         
           <div class="myClass71">
-            <p style="text-align: center; font-family: 'RobotoLight',sans-serif;  font-size: 55px; color: #000;">{{ brand.nam }}</p>
-            <p style="margin: 0px 15px 0px 15px; font-family: 'RobotoLight',sans-serif; font-size: 18px; text-align: justify; color: #000;
-              ">{{ brand.trademark }}</p>
-
-    <div class="myCarousel1">
-    <div id="myCarousel" class="carousel slide" data-ride="carousel" style="justify-content: center; color:black; width: 50%; height: 100%;">
-      <!-- Indicators -->
-      
-      <div class="carousel-inner" style="width: 100%; height: 100%;">
-         {% for product in products %}
-         {% if forloop.first %}
-        <div class="item active" style="width: 100%; height: 100%; background-color: rgba(0, 0, 0, 0);">
-          <div class="mycarousel-caption" style="color: black">
-           
-              <h1>{{ product.name }}</h1>
-              <p>{{ product.description }}</p>
-             
+            <p style="text-align: center; font-family: 'RobotoLight',sans-serif;  font-size: 55px;">{{ brand.nam }}</p>
+            <p style="margin: 0px 65px 0px 65px; font-family: 'RobotoLight',sans-serif; font-size: 18px; text-align: justify;">{{ brand.trademark }}</p>
+            <div class="myCarousel1" style="justify-content: center;  width: 100%; height: 100%;">
+              <div id="myCarousel" class="carousel slide" data-ride="carousel" style="justify-content: center; color:black; width: 100%; height: 100%;">
+              <!-- Indicators -->
+                <div class="carousel-inner" style="width: 100%; height: 100%;">
+                  {% for product in products %}
+                  {% if forloop.first %}
+                  <div class="item active" style="width: 100%; height: 100%; background-color: rgba(0, 0, 0, 0);">
+                    <div class="mycarousel-caption" style="">
+                      <h1>{{ product.name }}</h1>
+                      <p>{{ product.description }}</p>
+                    </div>
+                    <img style="margin:0% 0% 0% 20%; width: 110px; height: 400px;" alt="First slide" src="{{ product.image.url }}">
+                  </div>
+                  {% else %}
+                  <div class="item" style="width: 100%; height: 100%;">
+                    <div class="mycarousel-caption" style="">
+                      <h2>{{ product.name }}</h2>
+                      <p>{{ product.description }}</p>
+                    </div>
+                    <img style="margin:0% 0% 0% 20%; width: 110px; height: 400px; background: #ffffff00;" alt="Second slide" src="{{ product.image.url }}">
+                  </div>
+                  {% endif %}
+                  {%endfor%}
+                  <a style="margin:20% 0% 0% 7%;" class="left mycarousel-control" href="#myCarousel" data-slide="prev"><span class="glyphicon glyphicon-chevron-left" ></span></a>
+                  <a style="margin:20% 0% 0% 90%;" class="right mycarousel-control" href="#myCarousel" data-slide="next"><span class="glyphicon glyphicon-chevron-right"></span></a>
+                </div>
+              </div>
             </div>
-          <img style="width: 110px; height: 400px;" alt="First slide" src="{{ product.image.url }}">
+          </div>
         </div>
-        
-        {% else %}
-
-        <div class="item" style="width: 100%; height: 100%;">
-          <div class="mycarousel-caption" style="color: black">
-              <h2>{{ product.name }}</h2>
-              <p>{{ product.description }}</p>
-            </div>
-          <img style="width: 110px; height: 400px;" alt="Second slide" src="{{ product.image.url }}">
-          
-        </div>
-          {% endif %}
-          {%endfor%}
-        
       </div>
-      <a class="left mycarousel-control" href="#myCarousel" data-slide="prev"><span class="glyphicon glyphicon-chevron-left" ></span></a>
-      <a class="right mycarousel-control" href="#myCarousel" data-slide="next"><span class="glyphicon glyphicon-chevron-right"></span></a>
-   
-      </div><!-- /.carousel -->
-      </div>
-      </div>
+    </div>
   </div>
- 
 </div>
 
-
-
-
-     
-
-
-
-
-   <!-- FOOTER -->
-          </div>          
-        </div>
-      </div>   
 {% endblock %}
