--- a/templates/vacancy_kiev.html
+++ b/templates/vacancy_kiev.html
@@ -13,25 +13,25 @@
         <div class="col-lg-12" style="box-shadow: 0 8px 15px rgba(0, 0, 0, .6); border-radius: 5px 5px 5px 5px; padding-top: 20px; background: linear-gradient(45deg,#ffffff, #fffbdf);">
         <div class="row">
            <div class="col-lg-12" style="padding-top: 20px">
-             <p style="color: #02845e; text-align: center; font-size: 30px; font-family: Snell Roundhand, cursive;">Підприємству необхідні наступні вакансії</p>
+             <p style="color: #02845e; text-align: center; font-size: 30px; font-family: Snell Roundhand, cursive;">Підприємству необхідні наступні вакансії:</p>
             </div>  
-          </div>          
+          </div>
+        <div class="myClass7">           
         <div class="row"> 
         {% for vacancy in vacancys %}        	
-          <div class="myClass7">
+          
                    
               <div class="row">
                 <div class="col-lg-12">
                   <p style="margin: 0px 15px 0px 15px; font-family: Snell Roundhand, cursive; font-size: 23px; text-align: center;"><a style="color: #02845e" href="{% url 'get_vacancy_kiev' vacancy.id %}"> {{ vacancy.name_vacancy }}</a></p>                  
                 </div>
-              </div>
-          
-          </div>   
+              </div> 
+              <hr class="featurette-divider" style="border-color: #02845e; margin: 15px 375px 15px 375px;"> 
           {% endfor %}  
-        <div class="myClass7"> 
+        <div class="myClass7" style="box-shadow: 0 0 0 0 rgba(0, 0, 0, 0); "> 
         	<div class="row">
         		<div class="col-lg-12">
-        			<p style="text-align: center; font-family: Snell Roundhand, cursive; font-size: 15px;"> Місце відправлення розвозки</p>
+        			<p style="color: #02845e; text-align: center; font-family: Snell Roundhand, cursive; font-size: 15px;"> Місце відправлення </p>
         		</div>
         	</div>         
             <div class="row">
@@ -40,9 +40,7 @@
                 </div>
             </div>
         </div>    
-
-
-
-         </div>
+      </div>
+    </div>
       <!-- FOOTER -->
 {% endblock %}
