--- a/templates/vacancy_nivki.html
+++ b/templates/vacancy_nivki.html
@@ -15,23 +15,22 @@
            <div class="col-lg-12" style="padding-top: 20px">
              <p style="color: #02845e; text-align: center; font-size: 30px; font-family: Snell Roundhand, cursive;">Підприємству необхідні наступні вакансії</p>
             </div>  
-          </div>          
+          </div> 
+        <div class="myClass7">                    
         <div class="row"> 
         {% for vacancy in vacancys %}        	
-          <div class="myClass7">
-                   
+                      
               <div class="row">
                 <div class="col-lg-12">
                   <p style="margin: 0px 15px 0px 15px; font-family: Snell Roundhand, cursive; font-size: 23px; text-align: center;"> <a style="color: #02845e" href="{% url 'get_vacancy_nivki' vacancy.id %}">{{ vacancy.name_vacancy }}</a></p>                  
                 </div>
               </div>
-          
-          </div>   
+              <hr class="featurette-divider" style="border-color: #02845e; margin: 15px 375px 15px 375px;"> 
           {% endfor %}  
-        <div class="myClass7"> 
+        <div class="myClass7" style="box-shadow: 0 0 0 0 rgba(0, 0, 0, 0); "> 
         	<div class="row">
         		<div class="col-lg-12">
-        			<p style="text-align: center; font-family: Snell Roundhand, cursive; font-size: 15px;"> Місце знаходження</p>
+        			<p style="color: #02845e; text-align: center; font-family: Snell Roundhand, cursive; font-size: 15px;"> Місце знаходження</p>
         		</div>
         	</div>         
             <div class="row">
@@ -39,10 +38,9 @@
                   <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d9031.83653234612!2d30.392223645714406!3d50.45078430198078!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4cc6f8ddedb9b%3A0x642fbcbcad2659c4!2sRemont+Inzhektoriv%2C+Kapital%CA%B9nyy+Remont+Dvyhuna%2C+Vyhotovlennya+Ta+Remont+Reduktoriv!5e1!3m2!1sru!2sua!4v1530539343681" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>                  
                 </div>
             </div>
-        </div>    
-
-
-
-         </div>
+        </div>
+      </div>
+      </div>
+    </div>
       <!-- FOOTER -->
 {% endblock %}
