--- a/templates/vacancy_oblast.html
+++ b/templates/vacancy_oblast.html
@@ -13,25 +13,25 @@
         <div class="col-lg-12" style="box-shadow: 0 8px 15px rgba(0, 0, 0, .6); border-radius: 5px 5px 5px 5px; padding-top: 20px; background: linear-gradient(45deg,#ffffff, #fffbdf);">
         <div class="row">
            <div class="col-lg-12" style="padding-top: 20px">
-             <p style="color: #02845e; text-align: center; font-size: 30px; font-family: Snell Roundhand, cursive;">Підприємству необхідні наступні вакансії</p>
+             <p style="color: #02845e; text-align: center; font-size: 30px; font-family: Snell Roundhand, cursive;">Підприємству необхідні наступні вакансії:</p>
             </div>  
-          </div>          
+          </div>
+        <div class="myClass7">          
         <div class="row"> 
         {% for vacancy in vacancys %}        	
-          <div class="myClass7">
+          
                    
               <div class="row">
                 <div class="col-lg-12">
                   <p style="margin: 0px 15px 0px 15px; font-family: Snell Roundhand, cursive; font-size: 23px; text-align: center;"><a style="color: #02845e" href="{% url 'get_vacancy_oblast' vacancy.id %}"> {{ vacancy.name_vacancy }}</a></p>                  
                 </div>
               </div>
-          
-          </div>   
+              <hr class="featurette-divider" style="border-color: #02845e; margin: 15px 375px 15px 375px;"> 
           {% endfor %}  
-        <div class="myClass7"> 
+        <div class="myClass7" style="box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);"> 
         	<div class="row">
         		<div class="col-lg-12">
-        			<p style="text-align: center; font-family: Snell Roundhand, cursive; font-size: 15px;"> Місце відправлення розвозки</p>
+        			<p style="color: #02845e; text-align: center; font-family: Snell Roundhand, cursive; font-size: 15px;"> Місце знаходження</p>
         		</div>
         	</div>         
             <div class="row">
@@ -39,10 +39,9 @@
                   <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d10121.057558187955!2d30.414310309929146!3d50.640780765239!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x472b2bb9b67b65e9%3A0x529c5b0f83900f14!2z0LLRg9C70LjRhtGPINCf0L7Qu9GM0L7QstCwLCA5LCDQodGC0LDRgNGWINCf0LXRgtGA0ZbQstGG0ZYsINCa0LjRl9Cy0YHRjNC60LAg0L7QsdC7LiwgMDczNTM!5e0!3m2!1sru!2sua!4v1530538229229" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>        
               </div>
             </div>
-        </div>    
-
-
-
-         </div>
+        </div>
+      </div>
+      </div>
+    </div>
       <!-- FOOTER -->
 {% endblock %}
