--- a/templates/in_main.html
+++ b/templates/in_main.html
@@ -14,7 +14,7 @@
     <div class="container marketing" style="padding-top: 15px;">
 
 <div class="row" style=" background-color: #fffff"> 
-        <div class="col-lg-12" style="box-shadow: 0 8px 15px rgba(0, 0, 0, .6); border-radius: 5px 5px 5px 5px; padding-top: 20px; background: linear-gradient(45deg,#ffffff, #fffbdf); margin: 150px 1px 5px 1px;">    
+        <div class="col-lg-12" style="box-shadow: 0 8px 15px rgba(0, 0, 0, .6); border-radius: 5px 5px 5px 5px; padding-top: 20px; background: linear-gradient(45deg,#ffffff, #fffbdf); margin: 25px 1px 5px 1px;">    
        <div class="myCarousel">
     <div id="myCarousel" class="carousel slide" data-ride="carousel">
       <!-- Indicators -->
@@ -115,7 +115,7 @@
 
        <div class="row" style=" background-color: #fffff">  
        <div class="col-lg-12" style="box-shadow: 0 8px 15px rgba(0, 0, 0, .6); border-radius: 5px 5px 5px 5px; padding-top: 20px; background: linear-gradient(45deg,#ffffff, #fffbdf); margin: 1px 1px 5px 1px;">    
-       <p style="color: #02845e;  text-align: center; font-size: 30px; font-family: Snell Roundhand, cursive;">Нам довіряють свою продукцію найкращі бренди! </p>
+       <p style="color: #02845e;  text-align: center; font-size: 30px;">Нам довіряють свою продукцію найкращі бренди! </p>
        <div class="section">       
           <div class="container2" style="box-shadow: 0 8px 15px rgba(0, 0, 0, .6); border-radius: 5px 5px 5px 5px; background: linear-gradient(45deg,#ffffff, #fffbdf);">      
           {% for brand in brands %}
