--- a/templates/vacancy.html
+++ b/templates/vacancy.html
@@ -33,5 +33,10 @@
           </div>    
          </div>
        </div>
+       </div>
+     </div>
+   </div>
+
+
       <!-- FOOTER -->
 {% endblock %}
