--- a/templates/in_main.html
+++ b/templates/in_main.html
@@ -83,7 +83,7 @@
           <p style="color: #02845e; text-align: justify;" class="lead">Офісні приміщення оснащені новітньою технікою та всім необхідним приладдям для комфорту співробітників.  </p>
         </div>
         <div class="col-md-5">
-          <img class="featurette-image img-responsive" style="box-shadow: 0 8px 15px rgba(0, 0, 0, .6); border-radius: 5px 5px 5px 5px; margin: 10px;" data-src="holder.js/500x500/auto" alt="500x500" src="{% static "images/5.jpg" %}">
+          <img class="featurette-image img-responsive" style="box-shadow: 0 8px 15px rgba(0, 0, 0, .6); border-radius: 5px 5px 5px 5px; margin: 10px;" data-src="holder.js/500x500/auto" alt="500x500" src="{% static "images/ofice.jpg" %}">
         </div>
       </div>
 
@@ -91,7 +91,7 @@
 
       <div class="row featurette" style="box-shadow: 0 8px 15px rgba(0, 0, 0, .6); border-radius: 5px 5px 5px 5px; background-color: #ffffff; background: linear-gradient(45deg,#ffffff, #fffbdf)">
         <div class="col-md-5">
-          <img class="featurette-image img-responsive" style="box-shadow: 0 8px 15px rgba(0, 0, 0, .6); border-radius: 5px 5px 5px 5px; margin: 10px;" data-src="holder.js/500x500/auto" alt="500x500" src="{% static "images/4.jpg" %}">
+          <img class="featurette-image img-responsive" style="box-shadow: 0 8px 15px rgba(0, 0, 0, .6); border-radius: 5px 5px 5px 5px; margin: 10px;" data-src="holder.js/500x500/auto" alt="500x500" src="{% static "images/sklad.JPG" %}">
         </div>
         <div class="col-md-7">
           <h2 class="featurette-heading">Сучасні складські приміщення.</h2>
