--- a/static/static_dev/css/bootstrap.css
+++ b/static/static_dev/css/bootstrap.css
@@ -7287,7 +7287,7 @@ header{
     display: none;
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.65);
+    background: rgba(0, 0, 0, 0.9);
     z-index: 999;
     -webkit-animation: fade .6s;
     -moz-animation: fade .6s;
@@ -7357,4 +7357,171 @@ text-align: center;
 
 .myClass7 > p  i.fas {
   margin-top: 1px
+}
+
+.myModal{
+ position: fixed;
+    top: 0;
+    left: 0;
+    display: none;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.9);
+    z-index: 999;
+    -webkit-animation: fade .6s;
+    -moz-animation: fade .6s;
+    animation: fade .6s;
+    overflow: auto;
+    transition: all 0.3s ease;
+}
+.modal-content-1{
+  top: 25%;
+    left: 0;
+    right: 0;       
+    font-size: 14px;
+    margin: auto;
+    width: 85%;
+    min-width: 320px;
+    max-width: 600px;
+    position: absolute;
+    padding: 25px 25px;
+    border: 1px solid green;
+    background: #fefefe;
+    z-index: 1000;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    -ms-border-radius: 4px;
+    border-radius: 4px;
+    -webkit-box-shadow: 0 15px 20px rgba(0,0,0,.22),0 19px 60px rgba(0,0,0,.3);
+    -moz-box-shadow: 0 15px 20px rgba(0,0,0,.22),0 19px 60px rgba(0,0,0,.3);
+    -ms-box-shadow: 0 15px 20px rgba(0,0,0,.22),0 19px 60px rgba(0,0,0,.3);
+    box-shadow: 0 15px 20px rgba(0,0,0,.22),0 19px 60px rgba(0,0,0,.3);
+    -webkit-animation: fade .6s;
+    -moz-animation: fade .6s;
+    animation: fade .6s;
+    transition: all 0.3s ease;
+
+}
+
+.close1{
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+
+
+.dws1{
+  position: absolute;
+  top: 95%;
+  left: 90%;
+  transform: translate(-50%, -50%);
+}
+@media (min-width: 768px) and (max-width: 992px){
+  .dws1{
+  position: absolute;
+  top: 95%;
+  left: 80%;
+  transform: translate(-50%, -50%);
+}
+}
+@media (max-width: 768px){
+  .dws1, .close1{
+  display: none;
+}
+}
+
+
+.pulse1{
+  width: 90px;
+  height: 90px;
+  color: #fff;
+  text-align: center;
+  background: #02845e;
+  border-radius: 50%;
+  position: relative:
+}
+.phone1{
+  position: absolute;
+  font-size: 50px;
+  text-aling: center;
+  width: 90px;
+  height: 90px;
+  line-height: 94px;
+  animation: phone1 .9s ease-in-out infinite;
+
+}
+.text1{
+  opacity: 0;
+  position: absolute;
+  outline: 1px solid #02845e;
+  text-transform: uppercase;
+  font-weight: 700;
+  top: 36px;
+  left: 7px;
+  font-size: 14px;
+  transform: scaleX(-1);
+  transition: .5s ease-in-out;
+}
+.block1 {
+  position: absolute;
+  width: 90px;
+  height: 90px;
+  color: #fff;
+  text-align: center;
+  border-radius: 50%;
+  cursor: pointer;
+  z-index: 1;
+  overflow: hidden;
+}
+.pulse1 i {
+   transition: .5s ease-in-out;
+}
+.pulse1:hover i {
+  transition: .5s ease-in-out;
+  transform: scale(0);
+}
+.pulse1:hover .text1{
+  transform: scaleX(1);
+  transition: .5s ease-in-out;
+  opacity: 1;
+}
+.pulse1:hover::before,
+.pulse1:hover::after {
+  content:'';
+  position: absolute;
+  border: 2px solid #02845e;
+  left: -20px;
+  right: -20px;
+  top: -20px;
+  bottom: -20px;
+  border-radius: 50%;
+  animation: pulse1 1.8s linear infinite;
+  opacity: 0;
+}
+.pulse1:hover::after {
+  animation-delay: .5s;
+}
+@keyframes phone1{
+  0%, 100%{
+    transform: rotate(-20deg);
+  }
+  50% {
+    transform: rotate(21deg);
+  }
+}
+
+@keyframes pulse1 {
+  0%{
+    transform: scale(0.5);
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    transform: scale(1.2);
+    opacity: 0;
+  }
 }
